--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://fazil097.github.io/Project-Aura-personal-portfolio",
+  "homepage": "https://fazil097.github.io/Project-Aura-personal-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run built",
-    "deploy":"gh-pages -d disk"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.8.0",
     "react-scroll": "^1.9.3",
+    "react-toastify": "^11.0.5",
     "router": "^2.2.0",
     "routes": "^2.1.0"
   },
